# gen6502

./: Makefile  README.md  package.yaml  the.out
examples/: collatz.ml6  dune  examples.ml6  first.ml6  main.ml  multi.ml6  prim.ml
src/: Architecture.hs  Asm.hs  Codegen.hs  Compile.hs  Cost.hs  Emulate.hs  Examples.hs  Instruction.hs  Is5.hs  Language.hs  ParserDev.hs  Program.hs  Selection.hs  SemState.hs  Semantics.hs  Testing.hs  Top.hs  Util.hs
