(library
 (name gen6502examples)
 (modules prim first collatz)
 (flags
  (:standard -nostdlib -nopervasives)))

(rule
 (with-stdout-to
  collatz.ml
  (progn
   (echo
    "module F(X:Prim.S) : sig val main : X.byte -> X.byte end = struct open! X ")
   (cat collatz.ml6)
   (echo "end"))))

(rule
 (with-stdout-to
  first.ml
  (progn
   (echo
    "module F(X:Prim.S) : sig val main : X.byte -> X.byte end = struct open! X ")
   (cat first.ml6)
   (echo "end"))))

(executables
 (names main)
 (modules main)
 (libraries gen6502examples))
