(library
 (name gen6502examples)
 (modules prim examples collatz)
 (flags
  (:standard -nostdlib -nopervasives)))

(rule
 (with-stdout-to
  collatz.ml
  (progn
   (echo
    "module F(X:Prim.S) = struct open! X ")
   (cat collatz.ml6)
   (echo "end"))))

(rule
 (with-stdout-to
  examples.ml
  (progn
   (echo
    "module F(X:Prim.S) = struct open! X ")
   (cat examples.ml6)
   (echo "end"))))

(executables
 (names main)
 (modules main)
 (libraries gen6502examples))
